--- a/grafana-collector-config.yaml
+++ b/grafana-collector-config.yaml
@@ -25,16 +25,16 @@ processors:
     error_mode: ignore
     trace_statements:
       - context: resource
-        statements:
-          - delete_key(attributes, "k8s.pod.start_time")
-          - delete_key(attributes, "os.description")
-          - delete_key(attributes, "os.type")
-          - delete_key(attributes, "process.command_args")
-          - delete_key(attributes, "process.executable.path")
-          - delete_key(attributes, "process.pid")
-          - delete_key(attributes, "process.runtime.description")
-          - delete_key(attributes, "process.runtime.name")
-          - delete_key(attributes, "process.runtime.version")
+        statements: []
+          # - delete_key(attributes, "k8s.pod.start_time")
+          # - delete_key(attributes, "os.description")
+          # - delete_key(attributes, "os.type")
+          # - delete_key(attributes, "process.command_args")
+          # - delete_key(attributes, "process.executable.path")
+          # - delete_key(attributes, "process.pid")
+          # - delete_key(attributes, "process.runtime.description")
+          # - delete_key(attributes, "process.runtime.name")
+          # - delete_key(attributes, "process.runtime.version")
     metric_statements:
       - context: resource
         statements:
