--- a/grafana-collector-config.yaml
+++ b/grafana-collector-config.yaml
@@ -25,48 +25,48 @@ processors:
     error_mode: ignore
     trace_statements:
       - context: resource
-        statements: []
-          # - delete_key(attributes, "k8s.pod.start_time")
-          # - delete_key(attributes, "os.description")
-          # - delete_key(attributes, "os.type")
-          # - delete_key(attributes, "process.command_args")
-          # - delete_key(attributes, "process.executable.path")
-          # - delete_key(attributes, "process.pid")
-          # - delete_key(attributes, "process.runtime.description")
-          # - delete_key(attributes, "process.runtime.name")
-          # - delete_key(attributes, "process.runtime.version")
+        statements: 
+          - delete_key(resource.attributes, "k8s.pod.start_time")
+          - delete_key(resource.attributes, "os.description")
+          - delete_key(resource.attributes, "os.type")
+          - delete_key(resource.attributes, "process.command_args")
+          - delete_key(resource.attributes, "process.executable.path")
+          - delete_key(resource.attributes, "process.pid")
+          - delete_key(resource.attributes, "process.runtime.description")
+          - delete_key(resource.attributes, "process.runtime.name")
+          - delete_key(resource.attributes, "process.runtime.version")
     metric_statements:
       - context: resource
         statements:
-          - delete_key(attributes, "k8s.pod.start_time")
-          - delete_key(attributes, "os.description")
-          - delete_key(attributes, "os.type")
-          - delete_key(attributes, "process.command_args")
-          - delete_key(attributes, "process.executable.path")
-          - delete_key(attributes, "process.pid")
-          - delete_key(attributes, "process.runtime.description")
-          - delete_key(attributes, "process.runtime.name")
-          - delete_key(attributes, "process.runtime.version")
+          - delete_key(resource.attributes, "k8s.pod.start_time")
+          - delete_key(resource.attributes, "os.description")
+          - delete_key(resource.attributes, "os.type")
+          - delete_key(resource.attributes, "process.command_args")
+          - delete_key(resource.attributes, "process.executable.path")
+          - delete_key(resource.attributes, "process.pid")
+          - delete_key(resource.attributes, "process.runtime.description")
+          - delete_key(resource.attributes, "process.runtime.name")
+          - delete_key(resource.attributes, "process.runtime.version")
     log_statements:
       - context: resource
         statements:
-          - delete_key(attributes, "k8s.pod.start_time")
-          - delete_key(attributes, "os.description")
-          - delete_key(attributes, "os.type")
-          - delete_key(attributes, "process.command_args")
-          - delete_key(attributes, "process.executable.path")
-          - delete_key(attributes, "process.pid")
-          - delete_key(attributes, "process.runtime.description")
-          - delete_key(attributes, "process.runtime.name")
-          - delete_key(attributes, "process.runtime.version")
+          - delete_key(resource.attributes, "k8s.pod.start_time")
+          - delete_key(resource.attributes, "os.description")
+          - delete_key(resource.attributes, "os.type")
+          - delete_key(resource.attributes, "process.command_args")
+          - delete_key(resource.attributes, "process.executable.path")
+          - delete_key(resource.attributes, "process.pid")
+          - delete_key(resource.attributes, "process.runtime.description")
+          - delete_key(resource.attributes, "process.runtime.name")
+          - delete_key(resource.attributes, "process.runtime.version")
   transform/add_resource_attributes_as_metric_attributes:
     # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/transformprocessor
     error_mode: ignore
     metric_statements:
       - context: datapoint
         statements:
-          - set(attributes["deployment.environment"], resource.attributes["deployment.environment"])
-          - set(attributes["service.version"], resource.attributes["service.version"])
+          - set(datapoint.attributes["deployment.environment"], resource.attributes["deployment.environment"])
+          - set(datapoint.attributes["service.version"], resource.attributes["service.version"])
 
 exporters:
   otlphttp/grafana_cloud:
