add health_check extension

--- a/grafana-collector-config.yaml
+++ b/grafana-collector-config.yaml
@@ -78,6 +78,7 @@ exporters:
       authenticator: basicauth/grafana_cloud
     
 extensions:
+  health_check:
   basicauth/grafana_cloud:
     # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/extension/basicauthextension
     client_auth:
@@ -92,6 +93,7 @@ connectors:
 service:
   extensions:
     [
+      health_check,
       basicauth/grafana_cloud,
     ]
   pipelines:
