--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -9,10 +9,10 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  # - job_name: 'otel-collector'
-  #   scrape_interval: 5s
-  #   static_configs:
-  #     - targets: ['Otel-Collector:4318']
+  - job_name: 'otel-collector'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['Otel-Collector:8888']
 
   - job_name: 'tempo'
     scrape_interval: 5s
