--- a/tempo/tempo.yml
+++ b/tempo/tempo.yml
@@ -24,3 +24,17 @@ distributor:
           endpoint: "0.0.0.0:4317"
         http:
           endpoint: "0.0.0.0:4318"
+
+metrics_generator:
+  registry:
+    external_labels:
+      source: tempo
+      cluster: railway
+  storage:
+    path: /var/tempo/generator/wal
+    remote_write:
+      - url: http://Prometheus:9090/api/v1/write
+        send_exemplars: true
+  traces_storage:
+    path: /var/tempo/generator/traces
+
