--- a/tempo/tempo.yml
+++ b/tempo/tempo.yml
@@ -33,7 +33,7 @@ metrics_generator:
   storage:
     path: /var/tempo/generator/wal
     remote_write:
-      - url: "${env:RAILWAY_PROMETHEUS_ENDPOINT}"
+      - url: "http://prometheus.railway.internal:9090/api/v1/write"
         send_exemplars: true
   traces_storage:
     path: /var/tempo/generator/traces
