--- a/tempo/tempo.yml
+++ b/tempo/tempo.yml
@@ -4,9 +4,15 @@ server:
   http_listen_port: 3200
   log_level: info
 
-compactor:
-  compaction:
-    compaction_window: 1h
+query_frontend:
+  search:
+    duration_slo: 5s
+    throughput_bytes_slo: 1.073741824e+09
+    metadata_slo:
+        duration_slo: 5s
+        throughput_bytes_slo: 1.073741824e+09
+  trace_by_id:
+    duration_slo: 5s
 
 storage:
   trace:
@@ -17,8 +23,6 @@ storage:
       path: /var/tempo/blocks
 
 distributor:
-  log_received_spans:
-        enabled: true
   receivers:
     otlp:
       protocols:
@@ -28,14 +32,25 @@ distributor:
           endpoint: "0.0.0.0:4318"
 
 metrics_generator:
-  # registry:
-  #   external_labels:
-  #     source: tempo
-  #     cluster: railway
+  registry:
+    external_labels:
+      source: tempo
+      cluster: railway
   storage:
     path: /var/tempo/generator/wal
     remote_write:
-      - url: "http://prometheus.railway.internal:9090/api/v1/write"
+      - url: "${RAILWAY_PROMETHEUS_ENDPOINT:-http://prometheus:9090/api/v1/write}"
         send_exemplars: true
   traces_storage:
     path: /var/tempo/generator/traces
+  processor:
+    local_blocks:
+      filter_server_spans: false
+      flush_to_storage: true
+
+overrides:
+  defaults:
+    metrics_generator:
+      processors: [service-graphs, span-metrics, local-blocks] # enables metrics generator
+      generate_native_histograms: both
+
