--- a/tempo/tempo.yml
+++ b/tempo/tempo.yml
@@ -39,7 +39,8 @@ metrics_generator:
   storage:
     path: /var/tempo/generator/wal
     remote_write:
-      - url: "${RAILWAY_PROMETHEUS_ENDPOINT:-http://prometheus:9090/api/v1/write}"
+      # - url: "${RAILWAY_PROMETHEUS_ENDPOINT:-http://prometheus:9090/api/v1/write}"
+      - url: "${RAILWAY_PROMETHEUS_ENDPOINT}"
         send_exemplars: true
   traces_storage:
     path: /var/tempo/generator/traces
