--- a/opentelemetry/railway-otel-collector-config.yml
+++ b/opentelemetry/railway-otel-collector-config.yml
@@ -36,14 +36,15 @@ exporters:
     tls:
       insecure: true
 
-  zipkin:
-    endpoint: "${env:RAILWAY_ZINPKIN_ENDPOINT}" # http://zipkin.railway.internal:9411/api/v2/spans
-    format: proto
+  # These two service have the same function with Tempo, no need to use all three.
+  # zipkin:
+  #   endpoint: "${env:RAILWAY_ZINPKIN_ENDPOINT}" # http://zipkin.railway.internal:9411/api/v2/spans
+  #   format: proto
 
-  otlp/jaeger:
-    endpoint: "${env:RAILWAY_JAEGER_ENDPOINT}" # jaeger.railway.internal:4317
-    tls:
-      insecure: true
+  # otlp/jaeger:
+  #   endpoint: "${env:RAILWAY_JAEGER_ENDPOINT}" # jaeger.railway.internal:4317
+  #   tls:
+  #     insecure: true
 
 processors:
   batch:
@@ -61,7 +62,8 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [zipkin, otlp/jaeger, otlp/tempo]
+      exporters: [otlp/tempo]
+      # exporters: [zipkin, otlp/jaeger, otlp/tempo]
       # exporters: [zipkin, otlp/jaeger, otlp/tempo, debug]
     metrics:
       receivers: [otlp]
