--- a/loki/loki-config.yml
+++ b/loki/loki-config.yml
@@ -3,9 +3,13 @@ auth_enabled: false
 
 server:
   http_listen_port: 3100
+  http_server_idle_timeout: 30s
+  http_server_read_timeout: 30s
+  http_server_write_timeout: 10m0s
   log_level: info
   grpc_listen_port: 9096
   grpc_server_max_concurrent_streams: 1000
+  graceful_shutdown_timeout: 5s
 
 common:
   instance_addr: 127.0.0.1
@@ -29,18 +33,42 @@ schema_config:
     object_store: filesystem
     schema: v13
 
+compactor:
+  working_directory: /tmp/loki/compactor
+  compaction_interval: 10m
+  retention_enabled: true
+  retention_delete_delay: 2h
+  retention_delete_worker_count: 10
+  delete_request_store: filesystem
+
 frontend:
   encoding: protobuf
 
+ruler:
+  enable_alertmanager_discovery: true
+  enable_api: true
+  
 pattern_ingester:
   enabled: true
+  metric_aggregation:
+    loki_address: localhost:3100
 
 limits_config:
+  volume_enabled: true
+  retention_period: 720h
+  # retention_stream:
+  # - selector: '{environment="development"}'
+  #   priority: 1
+  #   period: 3d
   allow_structured_metadata: true
+  metric_aggregation_enabled: true
 
 query_range:
+  align_queries_with_step: true
+  cache_results: true
+  max_retries: 5
   results_cache:
     cache:
       embedded_cache:
         enabled: true
-        max_size_mb: 100
+        max_size_mb: 500
