--- a/prometheus/Dockerfile
+++ b/prometheus/Dockerfile
@@ -9,6 +9,6 @@ CMD [ "--config.file=/etc/prometheus/prometheus.yml", \
       "--storage.tsdb.retention.time=365d", \
       "--web.console.libraries=/usr/share/prometheus/console_libraries", \
       "--web.console.templates=/usr/share/prometheus/consoles", \
+      "--web.enable-remote-write-receiver", \
       "--web.external-url=http://localhost:9090", \
       "--log.level=info"]
-
