--- a/prometheus/Dockerfile
+++ b/prometheus/Dockerfile
@@ -10,5 +10,6 @@ CMD [ "--config.file=/etc/prometheus/prometheus.yml", \
       "--web.console.libraries=/usr/share/prometheus/console_libraries", \
       "--web.console.templates=/usr/share/prometheus/consoles", \
       "--web.enable-remote-write-receiver", \
+      "--enable-feature=native-histograms", \
       "--web.external-url=http://localhost:9090", \
       "--log.level=info"]
