--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -12,17 +12,17 @@ scrape_configs:
   - job_name: 'otel-collector'
     scrape_interval: 5s
     static_configs:
-      - targets: ['Otel-Collector:8889']
+      - targets: ['otel-collector.railway.internal:8889']
 
   - job_name: 'tempo'
     scrape_interval: 5s
     static_configs:
-      - targets: ['Tempo:3200']
+      - targets: ['tempo.railway.internal:3200']
 
   - job_name: 'loki'
     scrape_interval: 5s
     static_configs:
-      - targets: ['Loki:3100']
+      - targets: ['loki.railway.internal:3100']
 
   # - job_name: 'jaeger'
   #   scrape_interval: 5s
